# balancing_robot

./: .gitignore  CMakeLists.txt  Makefile  README.md  command to connect to websocket.txt  gencrt.sh
main/: CMakeLists.txt  cholesky.c  component.mk  controller.c  estimator.c  main.c  mpu6050.c  sample_multivariate_gaussian.c  system_semaphores.c  tb6612fng.c  webpage.c
main/include/: common_variables.h  controller.h  data_types.h  estimator.h  mpu6050.h  system_semaphores.h  tb6612fng.h
main/scripts/: adder.py
